app/assets/stylesheets/pages/_schedule.scss
$day-width: 80px;
$day-height: 120px;
$day-header-height: 60px;
$day-border: 1px solid #e8e9eb;

#calendar-page {
	#calendar-filter {
		button#filter-trigger {
			height: 46px;

			img {
				width: 16px;
				height: 16px;
			}
		}

		.filter-overlay {
			@extend .bg-white;

			position: fixed;
			width: 100%;
			height: 100vh;
			z-index: 1;
			left: 0;
			top: 0;

			.header {
				border-bottom: 2px solid $blueish-gray;
			}

			.content {
				@extend .px-3;

				h3 {
					@extend .uppercase, .mb-3;

					font-size: 16px;
				}
			}
		}
	}

	#calendar {
		@extend .relative;

		&.no-scroll {
			position: fixed;
			width: 100%;
		}

		.month-selection {
			h3 {
				@extend .semi-bold;
			}

			.selector-wrapper {
				@extend .shadow, .p-2, .rounded;

				position: absolute;
				bottom: -100px;
				left: calc((100vw - 320px) / 2);
				z-index: 1;
				background: white;
			}

			.months-grid {
				display: grid;
				grid-template-columns: repeat(4, auto);

				.month {
					@extend .p-1;

					&.current-month {
						@extend .rounded;

						color: white;
						background-color: $blue-2;
					}
				}
			}
		}

		#booking-form-container {
			@extend .pb-5;

			position: absolute;
			overflow-y: scroll;
			height: 100vh;
			width: 100%;
			background: white;
			z-index: 1;
		}

		.calendarContainer {
			display: flex;
			overflow-x: scroll;
			border-bottom: 2px solid $blueish-gray;

			p {
				margin: 0;
			}

			.profiles {
				@extend .sticky;

				z-index: 2;
				left: 0;
				background: white;
			}

			.week {
				height: $day-height;
				display: flex;

				&.profile {
					@extend .flex,
						.flex-column,
						.items-center,
						.justify-content-center,
						.px-1,
						.text-center,
						.border-box;

					width: 90px;

					&.today {
						@extend .justify-content-start;

						height: 60px;
						background-color: white;

						span {
							@extend .textBetween, .mt-0;

							color: $blue-2;
						}
					}

					img {
						@extend .mb-1;

						width: 52px;
						height: 52px;
					}

					p.profile-name {
						@extend .semi-bold, .textSm;

						color: #3f434a;
					}

					span.profile-profession {
						@extend .text-center, .uppercase;

						color: #828282;
						font-size: 10px;
					}
				}

				&.blank {
					background: transparent;
					height: $day-header-height;
				}
			}

			.dayHeaders {
				@extend .flex, .justify-content-between;

				top: 0;
				height: $day-header-height;

				.dayHeader {
					@extend .flex, .flex-column, .items-center, .border-box;

					width: $day-width;
					border: 1px solid transparent;

					&.weekend {
						color: #898994;
						z-index: -1;

						span {
							opacity: 0.8;
						}
					}

					span {
						font-size: 10px;
						font-weight: 500;
						color: inherit;

						&.today {
							color: $blue-2;
						}
					}

					p {
						@extend .bold, .flex, .justify-content-center, .items-center;

						width: 40px;
						border-radius: $radius-md;
						font-weight: 600;
						font-size: 18px;
						color: inherit;

						&.today {
							color: $blue-2;
						}
					}
				}
			}

			.daysCollection {
				@extend .flex;

				height: $day-height;

				// Top border on the first row
				&.first-row {
					.day {
						border-top: $day-border;
					}
				}

				.day {
					@extend .border-box;

					// Everyone gets a bottom & right border
					border-bottom: $day-border;
					border-right: $day-border;
					width: $day-width;
					height: $day-height;

					// First columns get a left border
					&:first-child {
						border-left: $day-border;
					}

					&.today {
						background: rgba(207, 239, 249, 0.2);
					}

					&.blueBorder {
						border: 1px solid transparent;
					}

					&.no-border-right {
						border-right: none;
					}

					&.weekend {
						background: rgba(235, 240, 247, 0.2);

						&.dark-border-left {
							border-left: 1px solid #dfe5ee;
						}

						&.dark-border-right {
							border-right: 1px solid #dfe5ee;
						}
					}

					.event {
						@extend .mb-2, .relative;

						background: $flat-orange-5;
						border-top: 8px solid $flat-orange-3;
						margin-right: -2px;

						.event-details {
							@extend .absolute;

							background: $flat-orange-5;
							z-index: 1;
						}

						&.red {
							background: $flat-red-5;
							border-top-color: $flat-red-3;

							.event-details {
								background: $flat-red-5;
							}
						}

						&.green {
							background: $flat-green-5;
							border-top-color: $flat-green-3;

							.event-details {
								background: $flat-green-5;
							}
						}

						.event-details {
							height: 100%;
							overflow-x: overlay;

							.title {
								@extend .textSm, .my-1;

								color: $dark-gray;
								font-weight: 600;
							}

							.time {
								font-size: 10px;
								font-weight: 500;
								color: rgba(108, 123, 138, 1);
							}
						}
					}
				}
			}
		}
	}
}

